@@ -2,6 +2,7 @@ Revision history for DBD-Cassandra
 
 0.09    2015/04/20
         Avoid double-encoding UTF-8 strings when passed in without the right flags
+        Automatically prune the prepare() cache to avoid memory leaks
 
 0.08    2015/04/17
         Avoid causing trouble when disconnecting an inactive handle
